--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,10 @@
-
+@@ -1,9 +1,4 @@
+/* =================================================================== 
+ *
+ *  Transcend v1.0 Base Stylesheet
+ *  03-18-2018
+ *  ------------------------------------------------------------------
+ *
  *  TOC:
  *  # imports
  *  # normalize
